--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width" />
-    <title>Monetizeify - Monetize your Work</title>
+    <title>Avenue25 - Monetize your Work</title>
 	<link rel="canonical" href="https://monetizeify.com" />
     <meta
       name="description"
-      content="Monetizeify helps you monetize your social media audience and make a passive income out of it."
+      content="Avenue 25 helps you monetize your social media audience and make a passive income out of it."
     />
     <link
       rel="icon"
@@ -22,13 +22,13 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Monetizeify - Monetize your Work "
+      content="Avenue 25 - Monetize your Work "
     />
     <meta
       property="og:description"
-      content="Monetizeify helps you monetize your social media audience and make a passive income out of it."
+      content="Avenue 25 helps you monetize your social media audience and make a passive income out of it."
     />
-    <meta property="og:site_name" content="Monetizeify" />
+    <meta property="og:site_name" content="Avenue 25" />
     <meta
       property="og:image"
       
@@ -37,11 +37,11 @@
     <meta name="twitter:site" content="@monetizeify" />
     <meta
       name="twitter:title"
-      content="Monetizeify - Monetize your Work "
+      content="Avenue 25 - Monetize your Work "
     />
     <meta
       name="twitter:description"
-      content="Monetizeify helps you monetize your social media audience and make a passive income out of it."
+      content="Avenue 25 helps you monetize your social media audience and make a passive income out of it."
     />
     <meta
       name="twitter:image"
@@ -966,7 +966,7 @@
               role="none"
               style="color: #000000; font-family: Quicksand"
             >
-              <span>Monetizeify</span>
+              <span>Avenue 25</span>
             </div></a
           ><a
             role="button"
@@ -1080,7 +1080,7 @@
                   --line-height: 1.4;
                   --mobile-line-height: 21px;
                 "
-                >Monetizeify helps you add interactive pop-ups on your website
+                >Avenue 25 helps you add interactive pop-ups on your website
                 to increase your sales, capture leads, or collect feedback
               </span></span
             >
