--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width" />
-    <title>Avenue25 - Monetize your Work</title>
-	<link rel="canonical" href="https://monetizeify.com" />
+    <title>Avenue 25 - Monetize your Work</title>
+	<link rel="canonical" href="https://avenue25.agency" />
     <meta
       name="description"
       content="Avenue 25 helps you monetize your social media audience and make a passive income out of it."
@@ -34,7 +34,7 @@
       
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@monetizeify" />
+    <meta name="twitter:site" content="@Avenue 25" />
     <meta
       name="twitter:title"
       content="Avenue 25 - Monetize your Work "
@@ -1705,7 +1705,7 @@
             <span class="_1untytp0"
               ><span style="color: #33ef22">50+ Customers</span></span
             ><span class="_1untytp0"
-              ><span style="color: #000000"> are using Monetizeify</span></span
+              ><span style="color: #000000"> are using Avenue 25</span></span
             >
           </h2>
           <p
@@ -1938,7 +1938,7 @@
                     >
                       <span class="_1untytp0"
                         ><span style="color: #000000"
-                          >Monetizeify team did this really professionaly, i couldn't do less than give a warm testimonial. Highly recommend!</span
+                          >Avenue 25 team did this really professionaly, i couldn't do less than give a warm testimonial. Highly recommend!</span
                         ></span
                       >
                     </p>
@@ -2013,7 +2013,7 @@
                     >
                       <span class="_1untytp0"
                         ><span style="color: #000000"
-                          >I was a bit sceptical about all this monetizing my audience and that i could do something wrong, thanks to Monetizeify they explained and made it so easy within a week!</span
+                          >I was a bit sceptical about all this monetizing my audience and that i could do something wrong, thanks to Avenue 25 they explained and made it so easy within a week!</span
                         ></span
                       >
                     </p>
@@ -2493,7 +2493,7 @@
                     text-align: left;
                   "
                 >
-                  <span class="_1untytp0">Monetizeify</span>
+                  <span class="_1untytp0">Avenue 25</span>
                 </p>
                 <p
                   class="slate-p _1vo7q450"
@@ -2510,7 +2510,7 @@
                         --font-size: 13px;
                         --mobile-font-size: 13px;
                       "
-                      >Copyright © 2022 Monetizeify, Inc.
+                      >Copyright © 2022 Avenue 25, Inc.
                     </span></span
                   >
                 </p>
@@ -2664,10 +2664,10 @@
       {
         "props": {
           "pageProps": {
-            "id": "www.monetizeify.com/",
-            "key": "www.monetizeify.com/",
+            "id": "www.Avenue 25.com/",
+            "key": "www.Avenue 25.com/",
             "space": {
-              "custom_domain": "www.monetizeify.com",
+              "custom_domain": "www.Avenue 25.com",
               "icon": "image.typedream.net/cdn-cgi/image/2green.png",
               "id": "90e4bc9a-bc7b-49aa-a366-fa95d42287f7",
               "metadata": {
@@ -2676,15 +2676,15 @@
                 },
                 "metatags": {
                   "description": "helps you monetize your social media audience and make a passive income out of it.\n",
-                  "title": "Monetizeify "
+                  "title": "Avenue 25 "
                 },
                 "twitter": {
                   "image": "v0/document/public/380243a6-a2e3-40b3-903c-21bfb4bebed0_1500x500_jpeg.jpg",
                   "title": "",
-                  "username": "@monetizeify"
+                  "username": "@Avenue 25"
                 }
               },
-              "name": "Monetizeify",
+              "name": "Avenue 25",
               "slug": "modal-forms",
               "routes": {
                 "page_id": "76c093b0-7011-461d-8947-680e797a891c",
@@ -2916,7 +2916,7 @@
                     "internalLink": false,
                     "title": "Book a Strategy Call",
                     "type": "button",
-                    "url": "https://calendly.com/monetizeify/strategy-call"
+                    "url": "https://calendly.com/Avenue 25/strategy-call"
                   }
                 ],
                 "isBlur": true,
@@ -2924,7 +2924,7 @@
                 "logoFontFamily": "quicksand",
                 "logoImage": "image.typedream.net/cdn-cgi/image/2green.png",
                 "logoScale": 0,
-                "logoTitle": "Monetizeify",
+                "logoTitle": "Avenue 25",
                 "logoType": "image",
                 "logoURL": "index.html",
                 "logoURLInternalLink": true,
@@ -2939,14 +2939,14 @@
               "name": "Home",
               "metadata": {
                 "metatags": {
-                  "description": "Monetizeify helps you monetize your social media audience and make a passive income out of it..\nWorks with Wix \u0026 Squarespace",
-                  "title": "Monetizeify - Monetize your Work "
+                  "description": "Avenue 25 helps you monetize your social media audience and make a passive income out of it..\nWorks with Wix \u0026 Squarespace",
+                  "title": "Avenue 25 - Monetize your Work "
                 },
                 "twitter": {
                   "description": "",
                   "image": "https://api.typedream.com/v0/document/public/a8cffc54-11ff-4f1c-b88b-084334f1a39f_Artboard_1_png.png?bucket=document",
                   "title": "",
-                  "username": "@monetizeify"
+                  "username": "@Avenue 25"
                 }
               },
               "published_content": [
@@ -2984,7 +2984,7 @@
                               "gradient": false,
                               "lineHeight": 1.4,
                               "styled": true,
-                              "text": "Monetizeify helps you monetize your social media audience and make a passive income out of it. \n"
+                              "text": "Avenue 25 helps you monetize your social media audience and make a passive income out of it. \n"
                             }
                           ],
                           "id": "41c10677-d632-445c-a731-64a55293f3dd",
@@ -3004,7 +3004,7 @@
                           "id": "1ed68112-dbe4-48e6-9faa-68fd8f0213a7",
                           "internal_link": false,
                           "type": "button",
-                          "url": "https://calendly.com/monetizeify/strategy-call"
+                          "url": "https://calendly.com/Avenue 25/strategy-call"
                         },
                         {
                           "align": "align_center",
@@ -3540,7 +3540,7 @@
                               "gradient": false,
                               "id": "cae93e7b-d998-4d24-b95e-6f5f52d78750",
                               "styled": true,
-                              "text": " are using Monetizeify"
+                              "text": " are using Avenue 25"
                             }
                           ],
                           "id": "1a33b161-afb6-4ec2-9907-50af8a7c4302",
@@ -3769,7 +3769,7 @@
                                           "gradient": false,
                                           "id": "2d050735-3255-42d9-bc8e-008e345b99e2",
                                           "styled": true,
-                                          "text": "Monetizeify and his team did this really professionaly, i couldn't do less than give a warm testimonial. Highly recommend!"
+                                          "text": "Avenue 25 and his team did this really professionaly, i couldn't do less than give a warm testimonial. Highly recommend!"
                                         }
                                       ],
                                       "id": "3776ac65-8a4b-48a4-8d24-14fbe981cb27",
@@ -3852,7 +3852,7 @@
                                           "color": "black",
                                           "gradient": false,
                                           "styled": true,
-                                          "text": "I was a bit sceptical about all this monetizing my audience and that i could do something wrong, thanks to Monetizeify they explained and made it so easy within a week!"
+                                          "text": "I was a bit sceptical about all this monetizing my audience and that i could do something wrong, thanks to Avenue 25 they explained and made it so easy within a week!"
                                         }
                                       ],
                                       "id": "b2205937-bfe1-410f-aaaf-9888bef08eda",
@@ -3910,7 +3910,7 @@
                           "id": "672e1731-57b8-49d7-8ebb-ea40f07334ed",
                           "internal_link": false,
                           "type": "button",
-                          "url": "https://calendly.com/monetizeify/strategy-call"
+                          "url": "https://calendly.com/Avenue 25/strategy-call"
                         },
                         {
                           "align": "align_center",
@@ -4236,7 +4236,7 @@
                           "id": "1fc550e9-6aa9-4898-bcac-eb80a99dda54",
                           "internal_link": false,
                           "type": "button",
-                          "url": "https://calendly.com/monetizeify/strategy-call"
+                          "url": "https://calendly.com/Avenue 25/strategy-call"
                         },
                         {
                           "align": "align_center",
@@ -4320,7 +4320,7 @@
                               "children": [
                                 {
                                   "id": "8b8f30b1-ccfc-48db-8f2f-d0a0723879e4",
-                                  "text": "Monetizeify"
+                                  "text": "Avenue 25"
                                 }
                               ],
                               "id": "809050ad-fc94-42d6-8ff2-6c9f424e4ea4",
@@ -4335,7 +4335,7 @@
                                   "gradient": false,
                                   "id": "caf001cb-44e6-4c8f-9a8a-47b041ef6663",
                                   "styled": true,
-                                  "text": "Copyright © 2022 Monetizeify, Inc. "
+                                  "text": "Copyright © 2022 Avenue 25, Inc. "
                                 }
                               ],
                               "id": "edc62c4e-d182-44ad-91c8-31870caf23c1",
@@ -4463,13 +4463,13 @@
             },
             "isChildTemplate": false,
             "childTemplateSlug": "",
-            "requestedURL": "https://www.monetizeify.com/",
+            "requestedURL": "https://www.avenue25.agency",
             "detectedFeatures": { "icon": true }
           },
           "__N_SSG": true
         },
         "page": "/[slugOrDomain]/[[...path]]",
-        "query": { "slugOrDomain": "www.monetizeify.com" },
+        "query": { "slugOrDomain": "avenue25.agency" },
         "buildId": "lcfExyKqBrxM2PnPAkTxK",
         "isFallback": false,
         "dynamicIds": [15219],
